# StockPipeline

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.py  docker-compose.yaml  fetch_company_data.py  main.py  pyproject.toml  requirements.txt
data/: companies.csv
elt/: fetch_company_data.py
elt/dags/: stock_pipeline_dag.py  test_spark_job.py
elt/dags/scripts/: extract_stock_data.py  load_to_adls.py  spark_job.py
elt/dags/utils/: __init__.py  config.py
elt/scripts/: __init__.py  extract_stock_data.py  load_to_adls.py  spark_job.py
elt/sql/: create_partition.sql  create_partition_scheme.sql  create_staging_table.sql  create_table.sql  upsert_stock_data.sql
scripts/: az_spark.py  load_to_adls.py
src/: extract_load.py
terraform/: main.tf  outputs.tf  providers.tf  tfplan  variables.tf
utils/: __init__.py
