[project]
name = "stock-data-pipeline"
version = "0.1.0"
description = "ELT pipeline for extracting stock data from Yahoo Finance and loading to Azure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow==2.10.5",
    "azure-identity==1.21.0",
    "azure-storage-blob==12.25.0",
    "azure-storage-file-datalake==12.19.0",
    "pandas==2.2.3",
    "pyarrow==19.0.1",
    "pyspark==3.5.5",
    "python-dotenv==1.0.1",
    "ruff>=0.11.2",
    "selenium==4.29.0",
    "yfinance==0.2.55",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
